--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node --nolazy --experimental-modules --loader ./esm-loader.mjs ./app.js",
-    "debug": "node --nolazy --experimental-modules --loader ./esm-loader.mjs -r dotenv/config --inspect-brk=9229 ./app.js",
+    "debug": "node --nolazy --experimental-modules --loader ./esm-loader.mjs -r dotenv/config ./app.js",
     "vapid": "node --nolazy --experimental-modules --loader ./esm-loader.mjs -r dotenv/config ./scripts/create-vapid-keys.js"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
-    "ejs": "^2.5.7",
-    "express": "~4.0.0",
+    "body-parser": "^1.0.2",
+    "ejs": "^2.6.1",
+    "express": "^4.0.0",
     "node-fetch": "^1.7.3",
     "rethinkdbdash": "^2.3.31",
     "urlsafe-base64": "^1.0.0",
-    "web-push": "^3.2.5"
+    "web-push": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^8.0.57",
