--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,7 @@
 {
-    "name": "kofeiini.fi"
+    "name": "smart-coffee",
+    "background_color": "#000000",
+    "theme_color": "#000000",
+    "display": "standalone",
+    "scope": "/"
 }
