--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 version: '3.7'
 services:
   backend-frontend:
+    container_name: backend-frontend
     build: backend-frontend
-    image: backend-frontend:latest
-    env_file: backend-frontend/.env
+    image: ${DOCKER_REGISTRY}/smart-coffee/backend-frontend:latest
     environment:
-      - DATABASE_URL=rethinkdb://db:28015/production
+      - DATABASE_URL=${DATABASE_URL:-rethinkdb://db:28015/production}
       - PORT=3000
+      - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
+      - VAPID_PUBLIC_KEY=${VAPID_PUBLIC_KEY}
+      - NODE_ENV=${NODE_ENV:-production}
     ports:
       - 3000:3000
     depends_on:
