--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,20 +43,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Pull updated images & update running containers
-        uses: appleboy/ssh-action@master
         env:
-          VAPID_PRIVATE_KEY: ${{ secrets.VAPID_PRIVATE_KEY }}
-          VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY }}
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-          NODE_ENV: production
-        with:
-          envs: GITHUB_REF,DOCKER_REGISTRY,VAPID_PRIVATE_KEY,VAPID_PUBLIC_KEY,NODE_ENV
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          port: ${{ secrets.DEPLOY_PORT }}
-          script: |
+          DEPLOY_KEY: "${{ secrets.DEPLOY_KEY }}"
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -t rsa -p ${{ secrets.DEPLOY_PORT }} ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+          echo "$DEPLOY_KEY" > ~/.ssh/id_rsa && chmod 0600 ~/.ssh/id_rsa
+          ssh -T ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} -p ${{ secrets.DEPLOY_PORT }} "
+            export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
+            export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
+            export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
             git fetch origin
-            git --work-tree=. checkout $GITHUB_REF -- docker-compose.yml
+            git --work-tree=. checkout $GITHUB_REF
             docker-compose -f docker-compose.yml pull
             docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
+          "
