--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,24 +37,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Pull updated images & update running containers
+      - name: Setup SSH config
         env:
           DEPLOY_KEY: "${{ secrets.DEPLOY_KEY }}"
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -t rsa -p ${{ secrets.DEPLOY_PORT }} ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
           echo "$DEPLOY_KEY" > ~/.ssh/id_rsa && chmod 0600 ~/.ssh/id_rsa
-          ssh -T ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} -p ${{ secrets.DEPLOY_PORT }} "
+      - name: Pull updated images & update running containers
+        run: |
+          ssh -T ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} -p ${{ secrets.DEPLOY_PORT }} <<EOT
             export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
             export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
             export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
+            cd ~/src
             git fetch origin
-            git --work-tree=. checkout $GITHUB_REF
+            git checkout $GITHUB_SHA
+            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
             docker-compose -f docker-compose.yml pull
             docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
-          "
+          EOT
