--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,13 +19,9 @@ jobs:
       - name: Checkout the sources
         uses: actions/checkout@v1
       - name: Login to private registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build the docker-compose stack
-        run: docker-compose -f docker-compose.yml up -d
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
+      - name: Build & start the docker-compose stack
+        run: docker-compose -f docker-compose.yml up --build -d
       - name: Check running containers
         run: docker ps -a
       - name: Check logs
@@ -46,14 +42,15 @@ jobs:
           echo "$DEPLOY_KEY" > ~/.ssh/id_rsa && chmod 0600 ~/.ssh/id_rsa
       - name: Pull updated images & update running containers
         run: |
-          ssh -T ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} -p ${{ secrets.DEPLOY_PORT }} <<EOT
+          ssh -tt ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} -p ${{ secrets.DEPLOY_PORT }} <<EOT
             export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
             export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
             export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
             cd ~/src
             git fetch origin
-            git checkout $GITHUB_SHA
+            git checkout $GITHUB_SHA -- docker-compose.yml
             echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
             docker-compose -f docker-compose.yml pull
             docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
+            exit
           EOT
