--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,18 +40,29 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -t rsa -p ${{ secrets.DEPLOY_PORT }} ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
           echo "$DEPLOY_KEY" > ~/.ssh/deploy.key && chmod 0600 ~/.ssh/deploy.key
-          cat ~/.ssh/config <<EOT
+          cat > ~/.ssh/config <<EOT
           Host production
             User ${{ secrets.DEPLOY_USER }}
             HostName ${{ secrets.DEPLOY_HOST }}
             Port ${{ secrets.DEPLOY_PORT }}
             IdentityFile ~/.ssh/deploy.key
           EOT
-      - name: Update repo
+      - name: Make sure docker-compose.yml files are up-to-date
         run: |
           ssh -T production <<EOT
             git fetch origin
-            git checkout $GITHUB_SHA -- docker-compose.yml
+            git checkout $GITHUB_SHA -- docker-compose.yml docker-compose.production.yml
+          EOT
+      - name: Store OVH configuration for Let's Encrypt DNS validation
+        run: |
+          ssh -T production <<EOT
+            cat > ovh.ini <<INI
+            dns_ovh_endpoint=ovh-eu
+            dns_ovh_application_key=${{ secrets.DNS_OVH_APPLICATION_KEY }}
+            dns_ovh_application_secret=${{ secrets.DNS_OVH_APPLICATION_SECRET }}
+            dns_ovh_consumer_key=${{ secrets.DNS_OVH_CONSUMER_KEY }}
+            INI
+            chmod 0600 ovh.ini
           EOT
       - name: Pull updated images & update running containers
         run: |
@@ -60,6 +71,6 @@ jobs:
             export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
             export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
             echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
-            docker-compose -f docker-compose.yml pull --quiet
-            docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
+            docker-compose -f docker-compose.yml -f docker-compose.production.yml pull --quiet
+            docker-compose -f docker-compose.yml -f docker-compose.production.yml up --no-build -d --remove-orphans
           EOT
