--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '3.7'
 services:
   backend-frontend:
+    restart: unless-stopped
     container_name: backend-frontend
     image: ${DOCKER_REGISTRY}/smart-coffee/backend-frontend:latest
     environment:
       - DATABASE_URL=${DATABASE_URL:-rethinkdb://db:28015/production}
-      - PORT=3000
+      - PORT=${PORT:-80}
       - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
       - VAPID_PUBLIC_KEY=${VAPID_PUBLIC_KEY}
       - NODE_ENV=${NODE_ENV:-production}
     depends_on:
       - db
   db:
+    restart: unless-stopped
     image: rethinkdb:2.4
     volumes:
       - db-data:/data
