--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,6 +70,9 @@ jobs:
             export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
             export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
             export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
+            export DEPLOY_DOMAIN=${{ secrets.DEPLOY_DOMAIN }}
+            export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
+            export LE_PATH=${{ secrets.LE_PATH }}
             echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
             docker-compose -f docker-compose.yml -f docker-compose.production.yml pull --quiet
             docker-compose -f docker-compose.yml -f docker-compose.production.yml up --no-build -d --remove-orphans
