--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,14 +20,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Login to private registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
-      - name: Build & start the docker-compose stack
-        run: docker-compose -f docker-compose.yml up --build -d
-      - name: Check running containers
-        run: docker ps -a
-      - name: Check logs
-        run: docker logs backend-frontend
+      - name: Build the docker-compose stack
+        run: docker-compose build
       - name: Push to registry
-        run: docker-compose -f docker-compose.yml push
+        run: docker-compose push
 
   deploy:
     runs-on: ubuntu-latest
@@ -50,30 +46,31 @@ jobs:
       - name: Make sure docker-compose.yml files are up-to-date
         run: |
           ssh -T production <<EOT
-            git fetch origin
-            git checkout $GITHUB_SHA -- docker-compose.yml docker-compose.production.yml
+          git fetch origin
+          git checkout $GITHUB_SHA -- docker-compose.yml
           EOT
       - name: Store OVH configuration for Let's Encrypt DNS validation
         run: |
           ssh -T production <<EOT
-            cat > ovh.ini <<INI
-            dns_ovh_endpoint=ovh-eu
-            dns_ovh_application_key=${{ secrets.DNS_OVH_APPLICATION_KEY }}
-            dns_ovh_application_secret=${{ secrets.DNS_OVH_APPLICATION_SECRET }}
-            dns_ovh_consumer_key=${{ secrets.DNS_OVH_CONSUMER_KEY }}
-            INI
-            chmod 0600 ovh.ini
+          cat > ovh.ini <<INI
+          dns_ovh_endpoint=ovh-eu
+          dns_ovh_application_key=${{ secrets.DNS_OVH_APPLICATION_KEY }}
+          dns_ovh_application_secret=${{ secrets.DNS_OVH_APPLICATION_SECRET }}
+          dns_ovh_consumer_key=${{ secrets.DNS_OVH_CONSUMER_KEY }}
+          INI
+          chmod 0600 ovh.ini
           EOT
       - name: Pull updated images & update running containers
         run: |
           ssh -T production <<EOT
-            export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
-            export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
-            export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
-            export DEPLOY_DOMAIN=${{ secrets.DEPLOY_DOMAIN }}
-            export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
-            export LE_PATH=${{ secrets.LE_PATH }}
-            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
-            docker-compose -f docker-compose.yml -f docker-compose.production.yml pull --quiet
-            docker-compose -f docker-compose.yml -f docker-compose.production.yml up --no-build -d --remove-orphans
+          export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
+          export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
+          export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
+          export DEPLOY_DOMAIN=${{ secrets.DEPLOY_DOMAIN }}
+          export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
+          export LE_PATH=${{ secrets.LE_PATH }}
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
+          docker-compose -f docker-compose.yml pull --quiet
+          docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
+          docker-compose -f docker-compose.yml logs
           EOT
