--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       VAPID_PRIVATE_KEY: ${{ secrets.VAPID_PRIVATE_KEY }}
       VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY }}
+      VAPID_SUBJECT: ${{ secrets.VAPID_SUBJECT }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
       NODE_ENV: production
 
@@ -65,6 +66,7 @@ jobs:
           ssh -T production <<EOT
           export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
           export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
+          export VAPID_SUBJECT=${{ secrets.VAPID_SUBJECT }}
           export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
           export DEPLOY_DOMAIN=${{ secrets.DEPLOY_DOMAIN }}
           export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
