--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL:-rethinkdb://db:28015/production}
       - PORT=${PORT:-80}
+      - VAPID_SUBJECT=${VAPID_SUBJECT}
       - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
       - VAPID_PUBLIC_KEY=${VAPID_PUBLIC_KEY}
       - NODE_ENV=${NODE_ENV:-production}
