--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Login to private registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
       - name: Build the docker-compose stack
-        run: docker-compose build
+        run: docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.ci.yml build
       - name: Push to registry
-        run: docker-compose push
+        run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml push
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
         run: |
           ssh -T production <<EOT
           git fetch origin
-          git checkout $GITHUB_SHA -- docker-compose.yml
+          git checkout $GITHUB_SHA -- docker-compose.yml docker-compose.ci.yml
           EOT
       - name: Store OVH configuration for Let's Encrypt DNS validation
         run: |
@@ -73,9 +73,9 @@ jobs:
           export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
           export LE_PATH=${{ secrets.LE_PATH }}
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
-          docker-compose -f docker-compose.yml pull --quiet
-          docker-compose -f docker-compose.yml up --no-build -d --remove-orphans
-          docker-compose -f docker-compose.yml logs -t
+          docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull --quiet
+          docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --no-build -d --remove-orphans
+          docker-compose -f docker-compose.yml -f docker-compose.ci.yml logs -t
           EOT
       - name: Prune all stale images & containers
         run: |
