Make Let's Encrypt optional on development setup

--- a/backend-frontend/Dockerfile
+++ b/backend-frontend/Dockerfile
@@ -1,10 +1,15 @@
-FROM node:14
-
+FROM node:14 AS base
 WORKDIR /home/node
-
 COPY package*.json ./
-RUN npm install --only=prod
 
+FROM base AS dev
+ENV NODE_ENV=development
+RUN npm install
 COPY . .
+CMD npm start
 
+FROM base AS prod
+ENV NODE_ENV=production
+RUN npm install --only=prod
+COPY . .
 CMD npm start
