--- a/ssl/nginx.conf
+++ b/ssl/nginx.conf
@@ -5,18 +5,14 @@ server {
     }
 }
 
-upstream app {
-    server backend-frontend;
-}
-
 server {
     listen 443 ssl;
 
-    ssl_certificate ${LE_PATH}/fullchain.pem;
-    ssl_certificate_key ${LE_PATH}/privkey.pem;
+    ssl_certificate ${SSL_CRT};
+    ssl_certificate_key ${SSL_KEY};
 
     location / {
-        proxy_pass http://app;
+        proxy_pass ${APP_URL};
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
