--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,8 @@ jobs:
       VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY }}
       VAPID_SUBJECT: ${{ secrets.VAPID_SUBJECT }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-      NODE_ENV: production
+      BUILD_TARGET: prod
+      BUILD_TAG: latest
 
     steps:
       - name: Checkout the sources
@@ -22,9 +23,9 @@ jobs:
       - name: Login to private registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
       - name: Build the docker-compose stack
-        run: docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.ci.yml build
+        run: docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.prod.yml build
       - name: Push to registry
-        run: docker-compose -f docker-compose.yml -f docker-compose.ci.yml push
+        run: docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.prod.yml push
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,7 +49,7 @@ jobs:
         run: |
           ssh -T production <<EOT
           git fetch origin
-          git checkout $GITHUB_SHA -- docker-compose.yml docker-compose.ci.yml
+          git checkout $GITHUB_SHA -- docker-compose.yml docker-compose.prod.yml
           EOT
       - name: Store OVH configuration for Let's Encrypt DNS validation
         run: |
@@ -62,24 +63,40 @@ jobs:
           INI
           chmod 0600 letsencrypt/ovh.ini
           EOT
-      - name: Pull updated images & update running containers
+      - name: Store production environment for docker-compose
         run: |
           ssh -T production <<EOT
-          export VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
-          export VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
-          export VAPID_SUBJECT=${{ secrets.VAPID_SUBJECT }}
-          export DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
-          export DEPLOY_DOMAIN=${{ secrets.DEPLOY_DOMAIN }}
-          export DEPLOY_EMAIL=${{ secrets.DEPLOY_EMAIL }}
-          export LE_PATH=${{ secrets.LE_PATH }}
+          cat > .env <<ENV
+          VAPID_PRIVATE_KEY=${{ secrets.VAPID_PRIVATE_KEY }}
+          VAPID_PUBLIC_KEY=${{ secrets.VAPID_PUBLIC_KEY }}
+          VAPID_SUBJECT=${{ secrets.VAPID_SUBJECT }}
+          DOCKER_REGISTRY=${{ secrets.DOCKER_REGISTRY }}
+          LETSENCRYPT_DOMAIN=${{ secrets.LETSENCRYPT_DOMAIN }}
+          LETSENCRYPT_EMAIL=${{ secrets.LETSENCRYPT_EMAIL }}
+          LETSENCRYPT_SUBDIR=${{ secrets.LETSENCRYPT_SUBDIR }}
+          DATABASE_NAME=${{ secrets.DATABASE_NAME }}
+          ENV
+          chmod 0600 .env
+          EOT
+      - name: Pull updated images
+        run: |
+          ssh -T production <<EOT
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin ${{ secrets.DOCKER_REGISTRY }}
-          docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull --quiet
-          docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --no-build -d --remove-orphans
-          docker-compose -f docker-compose.yml -f docker-compose.ci.yml logs -t
+          docker-compose -f docker-compose.yml -f docker-compose.prod.yml pull --quiet
+          EOT
+      - name: Update running containers
+        run: |
+          ssh -T production <<EOT
+          docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --no-build -d --remove-orphans
           EOT
       - name: Prune all stale images & containers
         run: |
           ssh -T production <<EOT
           docker container prune -f --filter "until=24h"
           docker image prune -f -a --filter "until=24h"
+          EOT
+      - name: Check docker-compose logs
+        run: |
+          ssh -T production <<EOT
+          docker-compose -f docker-compose.yml -f docker-compose.prod.yml logs -t
           EOT
