--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,13 @@ version: '3.7'
 services:
   backend-frontend:
     restart: unless-stopped
-    image: backend-frontend:latest
+    image: backend-frontend:${BUILD_TAG:-latest}
     environment:
-      - DATABASE_URL=${DATABASE_URL:-rethinkdb://db:28015/production}
-      - PORT=${PORT:-80}
-      - VAPID_SUBJECT=${VAPID_SUBJECT}
-      - VAPID_PRIVATE_KEY=${VAPID_PRIVATE_KEY}
-      - VAPID_PUBLIC_KEY=${VAPID_PUBLIC_KEY}
-      - NODE_ENV=${NODE_ENV:-production}
+      DATABASE_URL: rethinkdb://db:28015/${DATABASE_NAME:-test}
+      PORT: 80
+      VAPID_SUBJECT: ${VAPID_SUBJECT}
+      VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
+      VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
     depends_on:
       - db
   db:
@@ -17,34 +16,15 @@ services:
     image: rethinkdb:2.4
     volumes:
       - db-data:/data
-  certbot:
-    image: certbot/dns-ovh:latest
-    restart: 'no'
-    volumes:
-      - ./letsencrypt:/etc/letsencrypt
-    environment:
-      DEPLOY_DOMAIN: ${DEPLOY_DOMAIN}
-      DEPLOY_EMAIL: ${DEPLOY_EMAIL}
-    entrypoint: 'certbot certonly
-      -d ${DEPLOY_DOMAIN}
-      --email=${DEPLOY_EMAIL}
-      --agree-tos
-      --non-interactive
-      --dns-ovh
-      --dns-ovh-propagation-seconds=10
-      --dns-ovh-credentials=/etc/letsencrypt/ovh.ini'
   ssl:
     restart: unless-stopped
-    image: ssl:latest
-    environment:
-      LE_PATH: ${LE_PATH}
-    volumes:
-      - ./letsencrypt:/etc/letsencrypt
+    image: ssl:${BUILD_TAG:-latest}
     ports:
       - 80:80
       - 443:443
+    environment:
+      APP_URL: http://backend-frontend
     depends_on:
       - backend-frontend
-      - certbot
 volumes:
   db-data:
